2009-01-16  Ariya Hidayat  <ariya.hidayat@trolltech.com>

Reviewed by Adam Roben.

        https://bugs.webkit.org/show_bug.cgi?id=22452

        When plugins are disabled, plugin data should not be available for
        the page. This ensures that navigator.plugins would not see the
        additional MIME types supported by the plugins.

        * page/Page.cpp:
        (WebCore::Page::pluginData):
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::shouldUsePlugin):
        * rendering/RenderPartObject.cpp:
        (WebCore::RenderPartObject::updateWidget):

2009-01-16  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Adam Roben.

        [Qt] Prevent crash if plugin data is NULL.

        * WebCoreSupport/FrameLoaderClientQt.cpp: NULL check.
        (WebCore::FrameLoaderClientQt::objectContentType):

Canonical link: https://commits.webkit.org/32165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39969 268f45cc-cd09-0410-ab3c-d52691b4dbfc