WebCore/page/Page.cpp
@@ -292,6 +292,8 @@ void Page::refreshPlugins(bool reload)
 
 PluginData* Page::pluginData() const
 {
+    if (!settings()->arePluginsEnabled())
+        return 0;
     if (!m_pluginData)
         m_pluginData = PluginData::create(this);
     return m_pluginData.get();
